public class HeightMap {
    public double[][] height;

    public HeightMap() {
    }
}
